# senior-thesis

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
docs/: Poster.pptx  Presentation.pptx
link_pred/: dataset.py  pred.py  sample.py
link_pred/explainers/: explainer.py  gnnexplainer.py  random.py  subgraphx.py
link_pred/models/: model.pt  simple_model.pt
models/: facebook_model.pt  lastfm_model.pt  model.pt  simple_model.pt
notebooks/: Dataset Exploration.ipynb  Debug GNNExplainer.ipynb  Facebook Link Prediction V2.ipynb  Facebook Link Prediction V3 (Minibatch).ipynb  Facebook Link Prediction.ipynb  GNNExplainer BA Shapes.ipynb  GNNExplainer Link Prediction V1.ipynb  GNNExplainer Link Prediction V2.ipynb  GNNExplainer Link Prediction V3.ipynb  GNNExplainer Link Prediction.ipynb  Goodreads.ipynb  Heterogeneous Link Prediction Dataset 2.ipynb  Heterogeneous Link Prediction.ipynb  Homogeneous Link Prediction.ipynb
results/raw_data/: data_imdb_0_10000.json
src/: dataset.py  main.py  pred.py  process.py  sample.py  utils.py  visualize.py
src/datasets/: dblp.py  facebook.py  imdb.py  lastfm.py
src/eval/: latex_table.py  pred_models.py  process.py  statistics.py  stats.py  utils.py  visualize.py
src/experiments/: edge_vary_sparsity.py  sample_explanation.py  vary_gnnexplainer_epochs.py  vary_sparsity.py  vary_sparsity_figures.py  vary_subgraphx_t.py
src/explainers/: degree.py  edge_gnnexplainer.py  edge_subgraphx.py  embedding.py  explainer.py  gnnexplainer.py  (+3 more)
testing/: GNNExplainer Link Prediction V1.ipynb  GNNExplainer.ipynb  gnnexplainer_ba.py  test.py
website/: index.html
(+18 files in other folders)
